<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="ravenlair_title">Raven\'s Lair</string>
    <string name="ravenlair_summary">Unleash the Raven</string>
    <string name="dialog_team_title">The team</string>
    <string name="lead_developer_title">Lead Developer</string>
    <string name="manager_title">Project Manager</string>
    <string name="core_developer_title">Core Developer</string>
    <string name="ui_developer_title">UI/UX Developer</string>
    <string name="developer_title">Developer</string>
    <string name="maintainer_title">Maintainer</string>
    <string name="contributor_title">Contributor</string>
    <string name="light_settings_header">Light settings</string>
    <string name="battery_light_settings">Battery charging light</string>
    <string name="battery_light_summary">Enable or disable Battery light while on DND, low battery</string>
    <string name="battery_light_enable">Battery light</string>
    <string name="battery_light_allow_on_dnd_title">Battery light in Do Not Disturb mode</string>
    <string name="battery_light_low_blinking_title">Blinking light on low battery</string>
    <string name="battery_light_cat">Battery light color when charging</string>
    <string name="battery_light_low_color">Low battery</string>
    <string name="battery_light_medium_color">Medium battery</string>
    <string name="battery_light_full_color">Almost full battery</string>
    <string name="battery_light_reallyfull_color">Full (100) battery</string>
    <string name="navigation_system_title">System</string>
    <string name="navigation_lockscreen_title">Lockscreen</string>
    <string name="navigation_statusbar_title">Statusbar</string>
    <string name="navigation_hardware_title">Hardware</string>
    <string name="navigation_multitasking_title">Multitasking</string>
    <string name="miscellaneous_title">Miscellaneous</string>
    <string name="miscellaneous_summary">Miscellaneous tweaks</string>
    <string name="powermenu_title">Power menu</string>
    <string name="powermenu_summary">Configure the power menu</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_summary">Tweaks specific to system notifications</string>
    <string name="misc_notifications">Misc Notifications Settings</string>
    <string name="dev_options_title">Developer options items</string>
    <string name="gestures_title">Gestures</string>
    <string name="gestures_summary">Make your device smart with some Gestures</string>
    <string name="statusbar_gestures">Statusbar Gestures</string>
    <string name="misc_gestures">Misc Gestures</string>
    <string name="lockscreen_gestures">Lockscreen Gestures</string>
    <string name="fingerprint_prefs_title">Fingerprint prefs</string>
    <string name="fingerprint_prefs_summary">Tweaks specific to the fingerprint scanner</string>
    <string name="lockscreen_items_title">Lockscreen items</string>
    <string name="lockscreen_items_summary">Customize the lockscreen</string>
    <string name="switch_settings_title">Misc lockscreen settings</string>
    <string name="fingerprint_title">Fingerprint Settings</string>
    <string name="battery_options_category">Battery Tweaks</string>
    <string name="battery_options_title">Battery options</string>
    <string name="battery_options_summary">Customize the statusbar battery</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="carrier_label_summary">Customize the carrier label on the lockscreen or statusbar</string>
    <string name="clock_options_title">Clock options</string>
    <string name="clock_options_summary">Customize your statusbar clock</string>
    <string name="icon_manager_title">Icon manager</string>
    <string name="icon_manager_summary">Configure the visibility of statusbar items</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="quicksettings_summary">Configure the layout of the quick settings area</string>
    <string name="traffic_title">Traffic indicators</string>
    <string name="traffic_summary">Enable and configure the traffic indicators</string>
    <string name="switch_category">Advanced Tweaks</string>
    <string name="buttons_title">Buttons</string>
    <string name="buttons_summary">Configure volume rocker options</string>
    <string name="navigation_options_title">Navigation</string>
    <string name="navigation_options_summary">Configure navigation options</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_subtitle">Customize power menu</string>
    <string name="global_actions_power">Power</string>
    <string name="global_actions_restart">Restart</string>
    <string name="global_actions_airplane">Airplane</string>
    <string name="global_actions_settings">Settings</string>
    <string name="global_actions_lockdown">Lock Down</string>
    <string name="global_actions_soundpanel">Sound Panel</string>
    <string name="global_actions_users">Users</string>
    <string name="global_actions_screenshot">Screenshot</string>
    <string name="global_actions_screenrecord">Screenrecord</string>
    <string name="global_actions_flashlight">Flashlight</string>
    <string name="global_actions_emergency">Emergency</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">When restarting also show options for recovery and bootloader</string>
    <string name="heads_up_notifications">Heads Up</string>
    <string name="heads_up_summary">Customize Heads Up Behavior</string>
    <string name="network_traffic_state_title">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
    <string name="network_traffic_statusbar">Status bar</string>
    <string name="network_traffic_header">Expanded header</string>
    <string name="network_traffic_location_title">Traffic indicator placement</string>
    <string name="network_traffic_location_summary">Place indicator in either status bar or expanded header</string>
    <string name="charging_animation_title">Charging animation</string>
    <string name="charging_animation_summary">Display an animation when the device is plugged in</string>
      <string name="lockscreen_charging_animation_title">Charging animation</string>
    <string name="lockscreen_charging_animation_flash">Flash</string>
    <string name="lockscreen_charging_animation_battery">Battery</string>
    <string name="lockscreen_charging_animation_drop">Drop</string>
    <string name="lockscreen_charging_animation_explosion">Explosion</string>
    <string name="lockscreen_charging_animation_water">Water</string>
    <string name="lockscreen_charging_animation_phone">Phone</string>
    <string name="lockscreen_charging_animation_stack">Stack</string>
    <string name="lockscreen_charging_animation_wavy">Wavy</string>
    <string name="lockscreen_charging_animation_split">Split Loading</string>
    <string name="lockscreen_charging_animation_yellow">Yellow Animation</string>
    <string name="lockscreen_charging_animation_virus">Virus</string>
    <string name="lockscreen_charging_animation_wash">Precaution 1</string>
    <string name="lockscreen_charging_animation_wear">Precaution 2</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep on lockscreen</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreen to put phone to sleep</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep on statusbar</string>
    <string name="double_tap_sleep_gesture_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="double_tap_on_doze_to_wake_title">Double-tap to wake on doze</string>
    <string name="double_tap_on_doze_to_wake_summary">Double tap to wake when device is dreaming</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_summary">Display and customize battery bar near status bar or navigation bar</string>
    <string name="battery_bar_no_navbar">Battery bar location</string>
    <string name="battery_bar_location_hide">Hide</string>
    <string name="battery_bar_statusbar_top">Statusbar Top</string>
    <string name="battery_bar_statusbar_bot">Statusbar bottom</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="battery_bar_cat">Battery bar style</string>
    <string name="battery_bar_style_title">Battery bar alignment</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_style_regular">Regular</string>
    <string name="battery_bar_style_center_mirrored">Center-mirrored</string>
    <string name="battery_bar_style_reversed">Reversed</string>
    <string name="battery_bar_use_charging_color">Custom charging color</string>
    <string name="battery_bar_blend_color_title">Blend colors</string>
    <string name="battery_bar_blend_color_summary">Blend full/empty colors corresponding to battery percentage</string>
    <string name="battery_bar_blend_color_reverse_title">Reverse color direction</string>
    <string name="battery_bar_blend_color_reverse_summary_off">Full &#8594; empty: red &#8592; green &#8592; blue &#8592; red</string>
    <string name="battery_bar_blend_color_reverse_summary_on">Full &#8594; empty: red &#8594; green &#8594; blue &#8594; red</string>
    <string name="volume_stuff_title">Volume Button</string>
    <string name="volume_rocker_wake_title">Wake device</string>
    <string name="volume_rocker_wake_summary">Press volume keys to wake your device</string>
    <string name="lockscreen_media_category">Music/Media</string>
    <string name="lockscreen_albumart_filter_title">Media cover art filter</string>
    <string name="lockscreen_albumart_filter_none">None</string>
    <string name="lockscreen_albumart_filter_grayscale">Grayscale</string>
    <string name="lockscreen_albumart_filter_tint">Accent tinted</string>
    <string name="lockscreen_albumart_filter_blur">Blur</string>
    <string name="lockscreen_albumart_filter_grayblur">Grayscale and blurred</string>
    <string name="use_old_mobiletype_title">Old mobiletype</string>
    <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (Reboot required)</string>
    <string name="qs_bg_use_new_tint">QS Tint</string>
    <string name="qs_bg_use_new_tint_summary">Enable QS tiles tint style (Requires Reboot)</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on error fingerprint authentication</string>
    <string name="fod_icon_picker_category_title">FOD settings</string>
    <string name="fod_icon_picker_title">Fingerprint icon</string>
    <string name="fod_icon_picker_summary">Choose your favorite fingerprint icon</string>
    <string name="fod_recog_animation">Fingerprint animation</string>
    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
    <string name="fod_recog_animation_effect_title">Select fingerprint animation effect</string>
</resources>